tdf#142243 HUD - Use XCharacterClassification to convert case

This should use international case conversion, not just ascii one
that was used before.

Change-Id: Id01d3d0d30a846f02f97d081491b0de2c0d6ffef